--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,17 +1,29 @@
+option(USE_MYMATH "Use tutorial provided math implementation" ON)
+
 # set minimum cmake version
 cmake_minimum_required(VERSION 3.10)
 
 # set the project name
 project(Tutorial VERSION 1.0.0)
 
+# pass the version number
+configure_file(TutorialConfig.hh.in TutorialConfig.hh)
+
+if(USE_MYMATH)
+  # add the MathFunctions library
+  add_subdirectory(MathFunctions)
+  list(APPEND EXTRA_LIBS MathFunctions)
+  list(APPEND EXTRA_INCLUDES "${PROJECT_SOURCE_DIR}/MathFunctions")
+endif()
+
 # add the executable
 add_executable(Tutorial tutorial.cc)
 
-# pass the version number
-configure_file(TutorialConfig.hh.config TutorialConfig.hh)
+target_link_libraries(Tutorial PUBLIC ${EXTRA_LIBS})
 
 target_include_directories(Tutorial PUBLIC
                            "${PROJECT_BINARY_DIR}"
+                           ${EXTRA_INCLUDES}
                            )
 
 set(CMAKE_CXX_STANDARD 14)
