--- a/TutorialConfig.hh.in
+++ b/TutorialConfig.hh.in
@@ -2,3 +2,5 @@
 #define Tutorial_VERSION_MAJOR @Tutorial_VERSION_MAJOR@
 #define Tutorial_VERSION_MINOR @Tutorial_VERSION_MINOR@
 #define Tutorial_VERSION_PATCH @Tutorial_VERSION_PATCH@
+
+#cmakedefine USE_MYMATH
