--- a/TutorialConfig.hh.in
+++ b/TutorialConfig.hh.in
@@ -1,6 +1,6 @@
 // the configured options and setting for Tutorial
-#define Tutorial_VERSION_MAJOR @Tutorial_VERSION_MAJOR@
-#define Tutorial_VERSION_MINOR @Tutorial_VERSION_MINOR@
-#define Tutorial_VERSION_PATCH @Tutorial_VERSION_PATCH@
+#define Tutorial_VERSION_MAJOR @PROJECT_VERSION_MAJOR@
+#define Tutorial_VERSION_MINOR @PROJECT_VERSION_MINOR@
+#define Tutorial_VERSION_PATCH @PROJECT_VERSION_PATCH@
 
 #cmakedefine USE_MYMATH
