--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,33 +1,42 @@
-option(USE_MYMATH "Use tutorial provided math implementation" ON)
-
-# set minimum cmake version
 cmake_minimum_required(VERSION 3.10)
 
-# set the project name
-project(Tutorial VERSION 1.3.0)
+# set the project name and version
+project(Tutorial VERSION 1.3)
 
+# specify the C++ standard
+set(CMAKE_CXX_STANDARD 14)
+set(CMAKE_CXX_STANDARD_REQUIRED True)
+
+# should we use our own math functions
+option(USE_MYMATH "Use tutorial provided math implementation" ON)
+
+# configure a header file to pass some of the CMake settings
+# to the source code
+configure_file(TutorialConfig.hh.in TutorialConfig.hh)
+
+# add the MathFunctions library
 if(USE_MYMATH)
-  # add the MathFunctions library
   add_subdirectory(MathFunctions)
   list(APPEND EXTRA_LIBS MathFunctions)
 endif()
 
 # add the executable
 add_executable(Tutorial tutorial.cc)
-
 target_link_libraries(Tutorial PUBLIC ${EXTRA_LIBS})
 
+# add the binary tree to the search path for include files
+# so that we will find TutorialConfig.h
 target_include_directories(Tutorial PUBLIC
                            "${PROJECT_BINARY_DIR}"
                            )
 
-set(CMAKE_CXX_STANDARD 14)
-set(CMAKE_CXX_STANDARD_REQUIRED True)
-
-set(CMAKE_INSTALL_PREFIX "${PROJECT_BINARY_DIR}/install")
+# add the install targets
 install(TARGETS Tutorial DESTINATION bin)
-install(FILES "${PROJECT_BINARY_DIR}/TutorialConfig.hh" DESTINATION include)
+install(FILES "${PROJECT_BINARY_DIR}/TutorialConfig.h"
+  DESTINATION include
+  )
 
+# enable testing
 enable_testing()
 
 # does the application run
@@ -36,7 +45,8 @@ add_test(NAME Runs COMMAND Tutorial 25)
 # does the usage message work?
 add_test(NAME Usage COMMAND Tutorial)
 set_tests_properties(Usage
-                     PROPERTIES PASS_REGULAR_EXPRESSION "Usage: .*number")
+  PROPERTIES PASS_REGULAR_EXPRESSION "Usage:.*number"
+  )
 
 # define a function to simplify adding tests
 function(do_test target arg result)
@@ -54,6 +64,3 @@ do_test(Tutorial 7 "7 is 2.645")
 do_test(Tutorial 25 "25 is 5")
 do_test(Tutorial -25 "-25 is [-nan|nan|0]")
 do_test(Tutorial 0.0001 "0.0001 is 0.01")
-
-# pass variables
-configure_file(TutorialConfig.hh.in TutorialConfig.hh)
