--- a/MathFunctions/CMakeLists.txt
+++ b/MathFunctions/CMakeLists.txt
@@ -1,23 +1,21 @@
-add_library(MathFunctions mysqrt.cc)
+add_library(MathFunctions
+            mysqrt.cc
+            ${CMAKE_CURRENT_BINARY_DIR}/Table.h
+            )
+add_executable(MakeTable MakeTable.cc)
+
+add_custom_command(
+  OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/Table.h
+  COMMAND MakeTable ${CMAKE_CURRENT_BINARY_DIR}/Table.h
+  DEPENDS MakeTable
+  )
 
 # state that anybody linking to us needs to include the current source dir
 # to find MathFunctions.h, while we don't.
 target_include_directories(MathFunctions
           INTERFACE ${CMAKE_CURRENT_SOURCE_DIR}
+          PRIVATE ${CMAKE_CURRENT_BINARY_DIR}
           )
-
-# does this system provide the log and exp functions?
-include(CheckSymbolExists)
-if(NOT CMAKE_CXX_COMPILER_ID STREQUAL "MSVC")
-set(CMAKE_REQUIRED_LIBRARIES "m")
-endif()
-check_symbol_exists(log "math.h" HAVE_LOG)
-check_symbol_exists(exp "math.h" HAVE_EXP)
-
-if(HAVE_LOG AND HAVE_EXP)
-  target_compile_definitions(MathFunctions
-                             PRIVATE "HAVE_LOG" "HAVE_EXP")
-endif()
 
 # install rules
 install(TARGETS MathFunctions DESTINATION lib)
